--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "clementinejs",
-  "version": "1.0.2",
-  "description": "A light-weight MEAN stack boilerplate.",
+  "name": "upload-micro",
+  "version": "0.0.2",
+  "description": "A simple file upload micro service",
   "main": "server.js",
-  "scripts": {
-    "start": "gulp"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs"
+    "url": "git+https://github.com/roelver/upload-micro"
   },
-  "homepage": "http://johnstonbl01.github.io/clementinejs/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs/issues",
   "keywords": [
     "MEAN",
-    "MongoDB",
     "Express",
-    "Angular",
     "Node",
-    "javascript",
-    "boilerplate"
+    "javascript"
   ],
-  "author": "Blake Johnston",
+  "author": "Roel Verbunt",
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.3",
-    "mongodb": "^2.0.42"
+    "multer": "^1.1.0"
   }
 }
